# hdc-algo

./: MANIFEST.in  README.md  dev-env.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/workflows/: conda.yaml  main.yaml  publish-s3.yaml  seasmon_xr.yaml
conda/: Makefile  README.md  build-env.yaml
conda/recipe/: meta.yaml
conda/recipe-meta/: meta.yaml
hdc/algo/: __init__.py  _version.py  accessors.py  dekad.py  season.py  utils.py
hdc/algo/ops/: __init__.py  autocorr.py  lroo.py  spi.py  stats.py  tinterpolate.py  whit.py  ws2d.py  ws2dgu.py  ws2doptv.py  ws2doptvp.py  ws2doptvplc.py  ws2dpgu.py  ws2dwcv.py  ws2dwcvp.py  zonal.py
seasmon_xr/: accessors.py
tests/: conftest.py  test_accessors.py  test_algos.py  test_dekad.py  test_season.py  test_utils.py
