[metadata]
name = hdc-algo
description = xarray tools for seasonal monitor
version = attr: hdc.algo._version.__version__
author = WFP-VAM
author_email =
maintainer = WFP-VAM
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = MIT License
url = https://github.com/WFP-VAM/hdc-algo/
project_urls =
   Documentation = https://hdc-algo.readthedocs.io/en/latest/
   Bug Reporting = https://github.com/WFP-VAM/hdc-algo/issues/

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3.8
include_package_data = false
zip_safe = false
packages = find_namespace:
install_requires =
  numpy
  xarray
  dask[array]
  numba

[options.extras_require]
test =
    pytest
stats =
    scipy

[options.packages.find]
include =
  hdc*

[aliases]
# Define setup.py command aliases here
test = pytest

[options.entry_points]
numba_extensions =
  init = hdc.algo.vendor.numba_scipy:_init_extension